Refactoring: extract class URLBiulder #39